# diesel_migrations_async

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: check.yml
migrations_internals/: Cargo.toml
migrations_macros/: Cargo.toml
migrations_macros/src/: embed_migrations.rs  lib.rs
src/: embedded_migrations.rs  file_based_migrations.rs  lib.rs  migration_harness.rs  vendor.rs
