[package]
name = "diesel_migrations_async"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Migration management for diesel"
documentation = "https://docs.rs/crate/diesel_migrations"
homepage = "https://diesel.rs"
edition = "2021"
rust-version = "1.65.0"

[dependencies.migrations_internals]
version = "~0.1.0"
path = "migrations_internals"

[dependencies.migrations_macros]
version = "~0.1.0"
path = "migrations_macros"

[dev-dependencies]
dotenvy = "0.15"
cfg-if = "1.0.0"
tempfile = "3.2"

[dependencies.async-trait]
version = "~0.1.0"

[dependencies.diesel]
version = "~2.0.0"
default-features = false

[dependencies.diesel-async]
version = "~0.2.0"
default-features = false

[features]
default = []
postgres = ["diesel-async/postgres"]
mysql = ["diesel-async/mysql"]

[workspace]
members = ["migrations_internals", "migrations_macros"]
