[package]
name = "migrations_macros"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Codegeneration macros for diesels embedded migrations"
homepage = "https://diesel.rs"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
quote = "1"
proc-macro2 = "1"

[dependencies.migrations_internals]
version = "~0.1.0"
path = "../migrations_internals"

[dev-dependencies]
tempfile = "3.5.0"
dotenvy = "0.15"
cfg-if = "1.0.0"

[dev-dependencies.diesel]
version = "~2.1.0"
default-features = false

[dev-dependencies.diesel_migrations_async]
version = "~0.1.0"
path = "../"
default-features = false

[lib]
proc-macro = true

[features]
default = []
postgres = []
mysql = []
